--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
-{
-  "dependencies": {
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  }
+"dependencies": {
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-scripts": "5.0.1",
+  "framer-motion": "^11.0.0",
+  "lucide-react": "^0.468.0"
 }
